# Liquidator-Morpho

./: .env.example  .gitignore  Cargo.toml  README.md  morpho.json
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/db/: event_processor.rs  health_checker.rs  mod.rs  morpho_db.rs
app/src/liquidator/: mod.rs  swapper.rs  trigger.rs
app/src/oracles/: mod.rs  price_fetcher.rs
contracts/: foundry.toml
contracts/src/: IMorpho.sol  IOracle.sol  Iirm.sol  Liquidator.sol  MarketParamsLib.sol  MorphoCallbacks.sol
contracts/test/: Liquidator.t.sol
crates/bindings/src/: address.rs  counter.rs  events_lib.rs  i_events.rs  i_irm.rs  i_morpho.rs  i_morpho_base.rs  i_morpho_flash_loan_callback.rs  i_morpho_liquidate_callback.rs  i_morpho_repay_callback.rs  i_morpho_static_typing.rs  i_morpho_supply_callback.rs  i_morpho_supply_collateral_callback.rs  i_oracle.rs  ierc20.rs  ierc20_permit.rs  lib.rs  liquidator.rs  market_params_lib.rs  safe_erc20.rs  shared_types.rs
